--- a/style.css
+++ b/style.css
@@ -45,10 +45,12 @@ p{
 }
 
 .outter-wrapper{
-    display: flex;
     width: 100%;
     height: auto;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
     max-inline-size: min(90vw, 65rem);
     padding-block: 100px;
     overflow: hidden;
@@ -107,6 +109,7 @@ button:hover{
 @media screen and (max-width: 475px) {
     .outter-wrapper{
         display: flex;
+
     }
     .outter-wrapper .inner-wrapper{
         display: flex;
